@@ -10,6 +10,9 @@ Users now can set the 'serial_device' setting (registry key) to a COM port,
 to attach to the WPC/WPC95 serial printer interface.
 
 *** ROM SUPPORT *** Thanks to Tom Collins, Paul Swan, Dieter Werner, Victor Fernandez, Jordi Beltran
+Correct Dumps:
+DE: Batman 1.06 (just using correct name for the display rom (1.02 instead of 1.06))
+
 Clones:
 Bad Cats (The Cat's Meow) (MOD 1.2 & 1.3)
 Cue Ball Wizard (Spanish / Vifico license)
